--- a/styles/Portfolio.module.scss
+++ b/styles/Portfolio.module.scss
@@ -3,6 +3,7 @@
 
 .portfolioTitle {
     margin: 0;
+    margin-bottom: 1rem;
 }
 
 .portfolioIntro {
