--- a/styles/_theme.scss
+++ b/styles/_theme.scss
@@ -1,7 +1,7 @@
-$primary: #9200C9;
-$secondary: #FFF;
+$primary: #BB00FF;
+$secondary: #C9C9C9;
 $background: #000;
-$white: #FFF;
+$white: #C9C9C9;
 
 $theme: (
     "texts": (
